working guide activity

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="colorPrimaryDark">#343d46</color>
     <color name="colorAccent">#C0C5CE</color>
     <color name="card">#a7adba</color>
+    <color name="transparentWhite">#9AFFFFFF</color>
+    <color name="white">#FFFFFF</color>
 </resources>
